开始做管理员界面

--- a/front/login.html
+++ b/front/login.html
@@ -64,6 +64,6 @@
   </script>
   <script src="AES.js"></script>
   <script src="login.js"></script>
-  <script src="socket.js"></script>
+  <script src="socketlogin.js"></script>
 </body>
 </html>
