增加了管理员删除用户功能

--- a/front/managerpage1.html
+++ b/front/managerpage1.html
@@ -7,6 +7,8 @@
     <meta name="Keywords" content="关键词,关键词">
     <meta name="description" content="">
     <link rel="stylesheet" href="./managerpage1.css">
+    <link rel="stylesheet" href="./sweetalert2.min.css">
+    <script src="./sweetalert2@11.js"></script>
 </head>
 
 <body>
