--- a/front/managerpage1.html
+++ b/front/managerpage1.html
@@ -30,9 +30,9 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" onclick="showManagerInfo()">
+                        <a href="#" onclick="showSelfInfo()">
                             <i class="icon_1"></i>
-                            <span>管理员信息</span>
+                            <span>个人信息</span>
                         </a>
                     </li>
                     <li>
@@ -63,18 +63,6 @@
                         <a href="#" class="h_sel">
                             <i class="h_icon1"></i>
                             <span>首页</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="h_icon2"></i>
-                            <span>界面管理</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="h_icon8"></i>
-                            <span>个人中心</span>
                         </a>
                     </li>
                 </ul>
